fixed alignment of contact info

--- a/style.css
+++ b/style.css
@@ -163,7 +163,8 @@ font-size: 40px;
 
 
 .contact-info{
-    padding: 30px;
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .fa-envelope{
@@ -178,14 +179,14 @@ font-size: 40px;
 .fa-linkedin{
     font-size: 30px;
 }
-
+.contact-info>a{
+    color: #000000;
+}
+.contact-info>p{
+    color: #000000;
+}
 
 
 footer{
     background-color: #000000;
-
-}
-.bottom-logo>img{
-    height: 100px;
-    width: 120px;
 }
